@@ -3,10 +3,9 @@
 
 JUMIPLUGINDESC=<p>Tento obsahový plugin (content plugin) vkládá do Joomla! článků uživateslký skript: ze souboru nebo z databázového záznamu Jumi komponenty.</p><p><b>Užití: {jumi [uložený_kód] [arg1] [arg2] ... [argN]}</b><br />kde</p><ul><li><b>uložený_kód</b><br />je buď jméno souboru ke vložení, nebo<br />ID záznamu v databázi Jumi komponenty.<br />Cesta k souboru je relativní vzhledem k Přednastavené Absolutní cestě, která může být definována v parametrech pluginu. Pokud není definována pluginem, je rovna kořenovému adresáři Joomla!.<br />ID záznamu musí předcházet hvěydička (např. *4).</li><li><b>[arg1] ... [argN]</b><br />jsou volitelné Jumi argumenty. Záleží na vašem uloženém kódu, zda je umí zpracovat. Argumenty jsou z vloženého php kódu pomocí pole $jumi[].</li></ul><p>Příklad vložení souboru + argumenty:  {jumi [plugin/content/jumi/jumi_demo.php][first][second]}</p><p>Příklad vložení z databáze:  {jumi [*1]}</p><p>K dispozici je též kompatibilní Jumi komponenta a modul.</p><p>Další informace a zdroje: <a href="http://jumi.vedeme.cz">Stahování a manuály</a>, <a href="http://edo.webmaster.am/jumi">Tipy & triky</a>.</p>
 PARAMABSPATH=Volitelná Přednastavená Absolutní cesta pro vkládání souborů. Slouží jako automatická předpona k zadané cestě. Nedělejte žádné sleše na konci.Necháte-li toto prázdné, je identická s kořenovým adresářem Joomla!.
-PARAMHIDECODE=Je-li nastaveno na Yes pak Jumi kód není zobrazen, ani není zpracován.
+PARAMCLEARJUMI=If set to Yes all Jumi codes {jumi}{/jumi} are cleared from all articles and are not processed.
 PARAMNESTED=Je-li nastaveno na Yes pak Jumi vloží kód a nalezne-li v něm Jumi příkazovou syntaxi, vykoná jí také.
-ERROR_CONTENT=Jumi funguje, ale není nic, <b>co bz šlo ukázat</b>.<br />Specifikujte zdroj kódu (prní hranatá závorka).
+PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code {jumi}{/jumi} in question from the article instead.
+ERROR_CONTENT=Jumi funguje, ale není nic, <b>co by šlo ukázat</b>.<br />Specifikujte zdroj kódu (prní hranatá závorka).
 ERROR_FILE=Soubor<br /><b>%s</b><br />neexistuje, nebo jej není možné přečíst!
 ERROR_RECORD=Záznam ID:<b>%d</b> neexistuje!
-HIDE JUMI CODE=Schovat Jumi kód
-DEFAULT ABSOLUTE JUMI PATH=Přednastavená Absolutní Jumi Cesta
