@@ -3,10 +3,9 @@
 
 JUMIPLUGINDESC=<p>Այս տեղակայքի փլագինը ներբեռնում է սցենարներ Joomla! հոդվաշներում:</p><p><b>Օգտագործում. {jumi [stored_code_source] [arg1] [arg2] ... [argN]}</b><br />որտեղ</p><ul><li><b>stored_code_source</b><br />դա ներբեռնվող ֆայլի արահետն է կամ<br />Jumi հավելվածի համարը պահոցում.<br />Ֆայլի արահետը հարաբերական է համր բացարձակ արահետին, որը կարող է նշվել փլագինի պարամետրերում: Եթե նշված չէ, ապա համարժեք է Joomla!-ի արմատային պահոցին:<br />Գրառման համարը պետք է կատարվի աստղանիշի օգնությամբ (օրինակ *4).</li><li><b>[arg1] ... [argN]</b><br />դրանք ոչ պարտադիր արգումենտներ են: Դրանք կաշխատեն, եթե ձեր սցենարը կարող է նրանցից օգտվել: Արգումենտները կարող են կարդացվել $jumi[] մասիվի միջոցով ներբեռնոած ֆայլից:</li></ul><p>Պարամետրերով ներբեռնման օրինակ: {jumi [plugin/content/jumi/jumi_demo.php][first][second]}</p><p>Հավելվածի ներբեռնման օրինակ:  {jumi [*1]}</p><p>Կան նաև համատեղ մոդուլ և քոմփոնենթ:</p><p>Հավելյալ տեղեկություններ. <a href="http://jumi.vedeme.cz">Downloads & guides</a>, <a href="http://edo.webmaster.am/jumi">Tips & tricks</a>.</p>
 PARAMABSPATH=Ոչ անհրաժեշտ Jumi-ի համր բացարձակ արահետը ֆայլը ներբեռնելու համար: Այն ավելացվում է ներբեռնվող ֆայլի արահետի սկզբում: Եթե նշված չէ, ապա համարժեք է Joomla!-ի արմատային պահոցին: Օգտագործեք առանց վերջում թեք նշանի:
-PARAMHIDECODE=Եթե ընտրված է Այո, ապա Jumi սցենարը չի ցուցադրվում և չի կատարվում:
+PARAMCLEARJUMI=Եթե ընտրված է Այո, ապա Jumi սցենարը չի ցուցադրվում և չի կատարվում:
 PARAMNESTED=Եթե ընտրված է Այո, ապա Jumi-ն սցենարը ներբեռնելուց բացի կկատարի նաև ներբեռնված սցենարում ընդգրկված Jumi հրամանները:
+PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code {jumi}{/jumi} in question from the article instead.
 ERROR_CONTENT=Jumi-ն աշխատում է, բայց <b>չկա ոչինչ ցուցադրելու համար</b>:<br />Նշեք սցենարի ակունքը առաջին քառակուսի փակագծերում:
 ERROR_FILE=<b>%s</b> ֆայլը գոյություն չունի կամ չի կարող կարդացվել!
 ERROR_RECORD=Գրառում ID:<b>%d</b>-ը գոյություն չունի!
-HIDE JUMI CODE=Թաքցնել Jumi կոդը
-DEFAULT ABSOLUTE JUMI PATH=Jumi-ի համր բացարձակ արահետը
