@@ -3,10 +3,9 @@
 
 JUMIPLUGINDESC=<p>Этот плагин включает настраиваемoе содержание в статьи Joomla! из файла или из Jumi компоненты.</p><p><b>Использование: {jumi [stored_code_source] [arg1] [arg2] ... [argN]}</b><br />где</p><ul><li><b>stored_code_source</b><br />путь файла, которые должны быть включены или<br />номер приложения Jumi компоненты<br />Путь файл является относительным к абсолютной пути по умолчанию, который может быть установлен в параметрах плагина. Если оставить пустым, то будет идентичен корневому каталогу Joomla.<br />Номеру приложения должно предшествовать звездочка (например *4).</li><li><b>[arg1] ... [argN]</b><br />являются необязательными аргументами, зависящие от вашего скрипта. Достип к аргументам можно получить с помощью $jumi[] массива.</li></ul><p>Пример включения файла с аргументами:  {jumi [plugin/content/jumi/jumi_demo.php][first][second]}</p><p>Примир включения приложения:  {jumi [*1]}</p><p>Существует также совместимые с плагином Jumi модуль и компонента.</p><p>Дополнительные ресурсы: <a href="http://jumi.vedeme.cz">Дистрибутивы и инструкции</a>, <a href="http://edo.webmaster.am/jumi">Советы и хитрости</a>.</p>
 PARAMABSPATH=Не обязательный абсолютный путь для включаемого файла. Это ставится впереди пути файла, который должен быть включен. Если оставить пустым, то будет идентичен корневому каталогу Joomla. Используйте без / в конце.
-PARAMHIDECODE=Если установлено значение Да, Jumi код не отображается и не обрабатывается.
+PARAMCLEARJUMI=Если установлено значение Да, Jumi код не отображается и не обрабатывается.
 PARAMNESTED=Если установлено значение Да, Jumi включит код и также исполнит Jumi код находяшийся в включаемом коде.
+PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code {jumi}{/jumi} in question from the article instead.
 ERROR_CONTENT=Jumi работает, но <b>нечего показывать</b>.<br />Введите код и/или укажите непустой код.
 ERROR_FILE=Файл <b>%s</b> не существует или не является чтимым!
 ERROR_RECORD=Запись с ID:<b>%d</b> не существует!
-HIDE JUMI CODE=Скрыть Jumi код
-DEFAULT ABSOLUTE JUMI PATH=Абсолютный путь Jumi по умолчанию
